--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,24 +3,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "511ad3b8",
+   "id": "106b1d02",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import xlwings as xw\n",
     "\n",
-    "def update_cell_preserving_validations(folder_path):\n",
+    "def update_cell_via_vba(folder_path):\n",
+    "    macro_code = \"\"\"\n",
+    "    Sub UpdateA10()\n",
+    "        With ThisWorkbook.Sheets(1)\n",
+    "            .Range(\"A10\").Value = \"Setting for Sep'25\"\n",
+    "        End With\n",
+    "    End Sub\n",
+    "    \"\"\"\n",
     "    for filename in os.listdir(folder_path):\n",
     "        if filename.endswith(\".xlsx\"):\n",
     "            file_path = os.path.join(folder_path, filename)\n",
     "            app = xw.App(visible=False)\n",
     "            wb = app.books.open(file_path)\n",
-    "            ws = wb.sheets[0]  # First sheet\n",
-    "            ws.range(\"A10\").value = \"Setting for Sep'25\"\n",
+    "            wb.api.VBProject.VBComponents.Add(1).CodeModule.AddFromString(macro_code)\n",
+    "            app.api.Run(\"UpdateA10\")\n",
     "            wb.save()\n",
-    "            wb.close()\n",
-    "            app.quit()"
+    "            wb.close()\n"
    ]
   },
   {
