--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,30 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106b1d02",
+   "id": "a4495a70",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import xlwings as xw\n",
+    "import win32com.client\n",
     "\n",
-    "def update_cell_via_vba(folder_path):\n",
-    "    macro_code = \"\"\"\n",
-    "    Sub UpdateA10()\n",
-    "        With ThisWorkbook.Sheets(1)\n",
-    "            .Range(\"A10\").Value = \"Setting for Sep'25\"\n",
-    "        End With\n",
-    "    End Sub\n",
-    "    \"\"\"\n",
+    "def update_cell_preserving_everything(folder_path):\n",
+    "    excel = win32com.client.Dispatch(\"Excel.Application\")\n",
+    "    excel.Visible = False\n",
+    "    excel.DisplayAlerts = False\n",
+    "\n",
     "    for filename in os.listdir(folder_path):\n",
     "        if filename.endswith(\".xlsx\"):\n",
     "            file_path = os.path.join(folder_path, filename)\n",
-    "            app = xw.App(visible=False)\n",
-    "            wb = app.books.open(file_path)\n",
-    "            wb.api.VBProject.VBComponents.Add(1).CodeModule.AddFromString(macro_code)\n",
-    "            app.api.Run(\"UpdateA10\")\n",
-    "            wb.save()\n",
-    "            wb.close()\n"
+    "            wb = excel.Workbooks.Open(file_path)\n",
+    "            ws = wb.Sheets(1)  # First sheet\n",
+    "            ws.Range(\"A10\").Value = \"Setting for Sep'25\"\n",
+    "            wb.Save()\n",
+    "            wb.Close()\n",
+    "\n",
+    "    excel.Quit()"
    ]
   },
   {
