--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,6 +3,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7d1f4a2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def summarize_weekly_to_monthly(df, date_col=\"Week Commencing\", id_cols=None, sum_cols=None):\n",
+    "    \"\"\"\n",
+    "    Aggregates weekly attendance data to monthly totals per employee.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - df (pd.DataFrame): Input weekly data\n",
+    "    - date_col (str): Column with week start dates\n",
+    "    - id_cols (list): Columns to group by (e.g., Employee Id, MD Name, BF Level)\n",
+    "    - sum_cols (list): Columns to sum (e.g., Days at Any Office, Days at Contracted Office)\n",
+    "\n",
+    "    Returns:\n",
+    "    - pd.DataFrame: Monthly summary per employee\n",
+    "    \"\"\"\n",
+    "    if id_cols is None:\n",
+    "        id_cols = [\"Employee Id\"]\n",
+    "    if sum_cols is None:\n",
+    "        sum_cols = [\"Days at Any Office\", \"Days at Contracted Office\"]\n",
+    "\n",
+    "    # Ensure date column is datetime\n",
+    "    df[date_col] = pd.to_datetime(df[date_col], errors=\"coerce\")\n",
+    "\n",
+    "    # Create Month column in 'Apr-25' format\n",
+    "    df[\"Month\"] = df[date_col].dt.strftime(\"%b-%y\")\n",
+    "\n",
+    "    # Group and aggregate\n",
+    "    monthly = df.groupby(id_cols + [\"Month\"], as_index=False)[sum_cols].sum()\n",
+    "\n",
+    "    return monthly\n",
+    "\n",
+    "monthly_df = summarize_weekly_to_monthly(\n",
+    "    df=weekly_data,\n",
+    "    id_cols=[\"Employee Id\", \"MD Name\", \"BF Level 3 Name\"],\n",
+    "    sum_cols=[\"Days at Any Office\", \"Days at Contracted Office\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f4d52042",
    "metadata": {},
    "outputs": [],
