--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d1f4a2b",
+   "id": "5f6dc94f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flatten_monthly_data(df, static_cols, dynamic_metrics, month_col=\"Month\"):\n",
+    "    \"\"\"\n",
+    "    Converts long-format monthly data into wide-format pivoted data.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - df (pd.DataFrame): Input monthly data\n",
+    "    - static_cols (list): Columns to keep as identifiers (e.g., Employee Id, Name, BF Levels)\n",
+    "    - dynamic_metrics (list): Columns to pivot across months (e.g., Days at Any Office)\n",
+    "    - month_col (str): Column containing month labels (e.g., 'Apr-25')\n",
+    "    \n",
+    "    Returns:\n",
+    "    - pd.DataFrame: Flattened wide-format data\n",
+    "    \"\"\"\n",
+    "    df = df.copy()\n",
+    "    df[month_col] = df[month_col].astype(str)  # Ensure flat strings\n",
+    "    df = df.reset_index(drop=True)\n",
+    "\n",
+    "    # Melt dynamic metrics into long format\n",
+    "    melted = df.melt(\n",
+    "        id_vars=static_cols + [month_col],\n",
+    "        value_vars=dynamic_metrics,\n",
+    "        var_name=\"Metric\",\n",
+    "        value_name=\"Value\"\n",
+    "    )\n",
+    "\n",
+    "    # Create new column: Metric + Month\n",
+    "    melted[\"Metric_Month\"] = melted[\"Metric\"] + \" \" + melted[month_col]\n",
+    "\n",
+    "    # Pivot: one row per employee, one column per Metric_Month\n",
+    "    pivot_df = melted.pivot_table(\n",
+    "        index=static_cols,\n",
+    "        columns=\"Metric_Month\",\n",
+    "        values=\"Value\",\n",
+    "        aggfunc=\"first\"\n",
+    "    )\n",
+    "\n",
+    "    # Flatten column index\n",
+    "    pivot_df.columns.name = None\n",
+    "    pivot_df = pivot_df.reset_index()\n",
+    "\n",
+    "    return pivot_df\n",
+    "\n",
+    "\n",
+    "static_cols = [\n",
+    "    \"Employee Id\", \"Employee Name\", \"BF Level 1 Name\", \"BF Level 2 Name\",\n",
+    "    \"BF Level 3 Name\", \"BF Level 4 Name\", \"BF Level 5 Name\",\n",
+    "    \"MD Name\", \"Manager Name\"\n",
+    "]\n",
+    "\n",
+    "dynamic_metrics = [\"Days at Any Office\", \"Days at Contracted Office\"]\n",
+    "\n",
+    "flattened_df = flatten_monthly_data(\n",
+    "    df=monthly_df,\n",
+    "    static_cols=static_cols,\n",
+    "    dynamic_metrics=dynamic_metrics,\n",
+    "    month_col=\"Month\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd45faaf",
    "metadata": {},
    "outputs": [],
    "source": [
