--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,49 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eec6c0ea",
+   "id": "1e4cf9e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "\n",
-    "def sort_flattened_columns(df, dynamic_metrics):\n",
-    "    \"\"\"\n",
-    "    Sorts flattened columns chronologically by month and groups by metric.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    - df (pd.DataFrame): Flattened pivoted data\n",
-    "    - dynamic_metrics (list): List of metric prefixes (e.g., 'Days at Any Office')\n",
-    "    \n",
-    "    Returns:\n",
-    "    - pd.DataFrame: Sorted column order\n",
-    "    \"\"\"\n",
-    "    # Keep static columns\n",
+    "def sort_flattened_columns_by_month(df, dynamic_metrics):\n",
     "    static_cols = [col for col in df.columns if not any(metric in col for metric in dynamic_metrics)]\n",
-    "\n",
-    "    # Extract and sort dynamic columns\n",
     "    dynamic_cols = [col for col in df.columns if col not in static_cols]\n",
     "\n",
     "    def extract_month_key(col):\n",
-    "        match = re.search(r\"(\\w{3})-(\\d{2})$\", col)\n",
-    "        if match:\n",
-    "            month_str, year_str = match.groups()\n",
-    "            month_num = pd.to_datetime(month_str, format=\"%b\").month\n",
-    "            year_num = int(\"20\" + year_str)\n",
-    "            return (year_num, month_num)\n",
-    "        return (9999, 99)  # Push malformed columns to end\n",
+    "        for metric in dynamic_metrics:\n",
+    "            if col.startswith(metric):\n",
+    "                suffix = col.replace(metric, \"\").strip()\n",
+    "                try:\n",
+    "                    dt = pd.to_datetime(suffix, format=\"%b-%y\")\n",
+    "                    return (dt.year, dt.month)\n",
+    "                except:\n",
+    "                    return (9999, 99)\n",
+    "        return (9999, 99)\n",
     "\n",
-    "    # Sort by metric then by month\n",
-    "    sorted_cols = []\n",
-    "    for metric in dynamic_metrics:\n",
-    "        metric_cols = [col for col in dynamic_cols if col.startswith(metric)]\n",
-    "        metric_cols_sorted = sorted(metric_cols, key=extract_month_key)\n",
-    "        sorted_cols.extend(metric_cols_sorted)\n",
-    "\n",
-    "    # Reorder DataFrame\n",
-    "    df = df[static_cols + sorted_cols]\n",
-    "    return df\n",
-    "\n",
+    "    # Sort by month, then by metric\n",
+    "    sorted_cols = sorted(dynamic_cols, key=lambda col: (extract_month_key(col), dynamic_metrics.index(next(m for m in dynamic_metrics if col.startswith(m)))))\n",
+    "    return df[static_cols + sorted_cols]\n",
     "\n",
     "\n",
     "flattened_df = flatten_monthly_data(df, static_cols, dynamic_metrics)\n",
@@ -55,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e82dc2e9",
+   "id": "82f0a895",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93f3783b",
+   "id": "d1b573a8",
    "metadata": {},
    "outputs": [],
    "source": [
