--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e4cf9e8",
+   "id": "4104c796",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82f0a895",
+   "id": "4b40e86e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Location\"] = df[\"Building Name & ID\"].str.split().str[0].str.strip()\n",
+    "df[\"Week_Count\"] = 1\n",
+    "\n",
+    "agg_dict = {col: \"sum\" for col in sum_cols}\n",
+    "agg_dict[\"Week_Count\"] = \"sum\"\n",
+    "for col in other_cols:\n",
+    "    agg_dict[col] = \"first\"\n",
+    "\n",
+    "monthly = df.groupby(id_cols + [\"Month\"], as_index=False).agg(agg_dict)\n",
+    "\n",
+    "def compute_expected_days(row):\n",
+    "    location = row[\"Location\"]\n",
+    "    weeks = row[\"Week_Count\"]\n",
+    "    return weeks * 1 if location in [\"Chennai\", \"Gurugram\"] else weeks * 2\n",
+    "\n",
+    "monthly[\"Expected Workstyle Days\"] = monthly.apply(compute_expected_days, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4e15b21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1b573a8",
+   "id": "459dca0e",
    "metadata": {},
    "outputs": [],
    "source": [
