--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4104c796",
+   "id": "38347000",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# helper fn\n",
+    "import calendar\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def get_weeks_in_month(month_str):\n",
+    "    \"\"\"\n",
+    "    Calculates number of weeks in a month based on Mondays.\n",
+    "    Input format: 'Apr-25'\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        dt = datetime.strptime(month_str, \"%b-%y\")\n",
+    "        year, month = dt.year, dt.month\n",
+    "        month_calendar = calendar.monthcalendar(year, month)\n",
+    "        # Count how many weeks have a Monday (column index 0)\n",
+    "        return sum(1 for week in month_calendar if week[0] != 0)\n",
+    "    except:\n",
+    "        return 0\n",
+    "    \n",
+    "    \n",
+    " # After grouping and creating monthly, add:\n",
+    "   \n",
+    "monthly[\"Weeks_in_Month\"] = monthly[\"Month\"].apply(get_weeks_in_month)\n",
+    "\n",
+    "# replace your earlier logic with:\n",
+    "def compute_expected_days(row):\n",
+    "    location = str(row[\"Location\"]).strip()\n",
+    "    weeks = row[\"Weeks_in_Month\"]\n",
+    "    return weeks * 1 if location in [\"Chennai\", \"Gurugram\"] else weeks * 2\n",
+    "\n",
+    "monthly[\"Expected Workstyle Days\"] = monthly.apply(compute_expected_days, axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52cdcd3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b40e86e",
+   "id": "781fed8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4e15b21",
+   "id": "412c2ef4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "459dca0e",
+   "id": "0deb6395",
    "metadata": {},
    "outputs": [],
    "source": [
