--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,6 +3,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4d047c03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flag_other_office_visits(flattened_df, month_list):\n",
+    "    for month in month_list:\n",
+    "        any_col = f\"Days at Any Office {month}\"\n",
+    "        contracted_col = f\"Days at Contracted Office {month}\"\n",
+    "        flag_col = f\"Visited Other Office? {month}\"\n",
+    "\n",
+    "        if any_col in flattened_df.columns and contracted_col in flattened_df.columns:\n",
+    "            flattened_df[flag_col] = (\n",
+    "                flattened_df[any_col] - flattened_df[contracted_col]\n",
+    "            ).apply(lambda x: \"Yes\" if x > 0 else \"No\")\n",
+    "    return flattened_df\n",
+    "def detect_weekly_travelers(weekly_df, threshold=3):\n",
+    "    \"\"\"\n",
+    "    Flags employees who visited a non-contracted office ≥ threshold days in a week.\n",
+    "    \"\"\"\n",
+    "    def is_travel(row):\n",
+    "        if row[\"Location\"] != row[\"Contracted Location\"] and row[\"Days at Office\"] >= threshold:\n",
+    "            return \"Likely Traveling\"\n",
+    "        return \"Normal\"\n",
+    "\n",
+    "    weekly_df[\"Travel Flag\"] = weekly_df.apply(is_travel, axis=1)\n",
+    "    return weekly_df\n",
+    "\n",
+    "\n",
+    "\n",
+    "monthly, weeks_lookup = extract_weeks_lookup_table(monthly)\n",
+    "flattened_df = flatten_monthly_data(monthly, static_cols, dynamic_metrics)\n",
+    "flattened_df = sort_flattened_columns_by_month(flattened_df, dynamic_metrics)\n",
+    "\n",
+    "month_list = weeks_lookup[\"Month\"].tolist()\n",
+    "flattened_df = calculate_workstyle_compliance(flattened_df, weeks_lookup, month_list)\n",
+    "flattened_df = flag_other_office_visits(flattened_df, month_list)\n",
+    "\n",
+    "weekly_df = detect_weekly_travelers(weekly_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "38347000",
    "metadata": {},
    "outputs": [],
