--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,6 +3,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b8038912",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_expected_workstyle_days_per_month(flattened_df, weeks_lookup, month_list, location_col=\"Location\"):\n",
+    "    \"\"\"\n",
+    "    Adds 'Expected Workstyle Days <Month>' columns to flattened_df based on:\n",
+    "    - Location (1 day/week for Gurugram/Chennai, 2 for others)\n",
+    "    - Weeks in each month (from weeks_lookup)\n",
+    "\n",
+    "    Parameters:\n",
+    "    - flattened_df (pd.DataFrame): Your pivoted monthly data\n",
+    "    - weeks_lookup (pd.DataFrame): Month → Weeks_in_Month mapping\n",
+    "    - month_list (list): List of month strings like ['Apr-25', 'May-25']\n",
+    "    - location_col (str): Column in flattened_df with employee location\n",
+    "\n",
+    "    Returns:\n",
+    "    - pd.DataFrame: Updated flattened_df with expected days per month\n",
+    "    \"\"\"\n",
+    "    weeks_dict = dict(zip(weeks_lookup[\"Month\"], weeks_lookup[\"Weeks_in_Month\"]))\n",
+    "\n",
+    "    for month in month_list:\n",
+    "        expected_col = f\"Expected Workstyle Days {month}\"\n",
+    "        weeks = weeks_dict.get(month, 0)\n",
+    "\n",
+    "        flattened_df[expected_col] = flattened_df[location_col].apply(\n",
+    "            lambda loc: weeks * (1 if loc.strip().lower() in [\"gurugram\", \"chennai\"] else 2)\n",
+    "        )\n",
+    "\n",
+    "    return flattened_df\n",
+    "\n",
+    "month_list = weeks_lookup[\"Month\"].tolist()\n",
+    "\n",
+    "flattened_df = add_expected_workstyle_days_per_month(\n",
+    "    flattened_df,\n",
+    "    weeks_lookup,\n",
+    "    month_list,\n",
+    "    location_col=\"Location\"\n",
+    ")\n",
+    "\n",
+    "month_list = weeks_lookup[\"Month\"].tolist()\n",
+    "\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4d047c03",
    "metadata": {},
    "outputs": [],
