--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8038912",
+   "id": "35605d0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_monthly_trend_summary(flattened_df, month_list, target_md):\n",
+    "    \"\"\"\n",
+    "    Creates a monthly trend summary for a given MD, broken down by BF Level 3 and BF Level 4.\n",
+    "    Includes headcount, GCB 3 count, workstyle met count, % met, and MoM change.\n",
+    "    \"\"\"\n",
+    "    # Filter for the target MD\n",
+    "    md_df = flattened_df[flattened_df[\"MD\"] == target_md].copy()\n",
+    "\n",
+    "    summary_rows = []\n",
+    "\n",
+    "    for month in month_list:\n",
+    "        met_col = f\"Workstyle Met? {month}\"\n",
+    "\n",
+    "        if met_col not in md_df.columns:\n",
+    "            continue  # Skip if column missing\n",
+    "\n",
+    "        grouped = (\n",
+    "            md_df.groupby([\"BF Level 3\", \"BF Level 4\"])\n",
+    "            .apply(lambda grp: pd.Series({\n",
+    "                \"Total Headcount\": len(grp),\n",
+    "                \"GCB 3 Count\": (grp[\"GCB\"] == 3).sum(),\n",
+    "                \"Workstyle Met Count\": (grp[met_col] == \"Met\").sum(),\n",
+    "            }))\n",
+    "            .reset_index()\n",
+    "        )\n",
+    "\n",
+    "        grouped[\"Month\"] = month\n",
+    "        grouped[\"% Met\"] = (grouped[\"Workstyle Met Count\"] / grouped[\"Total Headcount\"] * 100).round(2)\n",
+    "\n",
+    "        summary_rows.append(grouped)\n",
+    "\n",
+    "    # Combine all months\n",
+    "    trend_df = pd.concat(summary_rows, ignore_index=True)\n",
+    "\n",
+    "    # Sort and calculate MoM change\n",
+    "    trend_df = trend_df.sort_values([\"BF Level 3\", \"BF Level 4\", \"Month\"])\n",
+    "    trend_df[\"MoM Change %\"] = (\n",
+    "        trend_df.groupby([\"BF Level 3\", \"BF Level 4\"])[\"% Met\"]\n",
+    "        .diff()\n",
+    "        .round(2)\n",
+    "    )\n",
+    "\n",
+    "    return trend_df\n",
+    "\n",
+    "month_list = weeks_lookup[\"Month\"].tolist()\n",
+    "trend_df = generate_monthly_trend_summary(flattened_df, month_list, target_md=\"MD123\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2c7fc04",
    "metadata": {},
    "outputs": [],
    "source": [
