--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35605d0d",
+   "id": "2d79439e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "long_df = pd.melt(\n",
+    "    trend_df,\n",
+    "    id_vars=[\"Month\", \"MD Name\", \"BF Level 2\", \"BF Level 3\", \"BF Level 4\", \"GCB\"],\n",
+    "    value_vars=[\"Total Headcount\", \"GCB 3 Count\", \"Workstyle Met Count\", \"% Met\", \"MoM Change %\"],\n",
+    "    var_name=\"Metric\",\n",
+    "    value_name=\"Value\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c901405",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2c7fc04",
+   "id": "10e43df2",
    "metadata": {},
    "outputs": [],
    "source": [
