--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d79439e",
+   "id": "4608763e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped[\"% Met or Exceeding\"] = (\n",
+    "    grouped[\"Met or Exceeding Count\"] / grouped[\"Total Headcount\"]\n",
+    ").replace([float(\"inf\"), -float(\"inf\")], 0).fillna(0).round(2) * 100\n",
+    "\n",
+    "grouped[\"% Not Met\"] = (\n",
+    "    grouped[\"Not Met Count\"] / grouped[\"Total Headcount\"]\n",
+    ").replace([float(\"inf\"), -float(\"inf\")], 0).fillna(0).round(2) * 100\n",
+    "\n",
+    "grouped[\"% Exceeding\"] = (\n",
+    "    grouped[\"Exceeding Count\"] / grouped[\"Total Headcount\"]\n",
+    ").replace([float(\"inf\"), -float(\"inf\")], 0).fillna(0).round(2) * 100\n",
+    "\n",
+    "grouped[\"% Defaulter\"] = (\n",
+    "    grouped[\"Defaulter Count\"] / grouped[\"Total Headcount\"]\n",
+    ").replace([float(\"inf\"), -float(\"inf\")], 0).fillna(0).round(2) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "952d8000",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c901405",
+   "id": "b6834026",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10e43df2",
+   "id": "3b40aa50",
    "metadata": {},
    "outputs": [],
    "source": [
