--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4608763e",
+   "id": "36d2a6f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. separate MoM Change % for Averagin\n",
+    "\n",
+    "mom_df = long_df[long_df[\"Metric\"] == \"MoM Change %\"].copy()\n",
+    "mom_df[\"Value\"] = mom_df[\"Value\"].astype(float)\n",
+    "\n",
+    "mom_avg = (\n",
+    "    mom_df.groupby([\"BF Level 2\", \"BF Level 3\", \"BF Level 4\", \"GCB\", \"Month\"])[\"Value\"]\n",
+    "    .mean()\n",
+    "    .reset_index()\n",
+    "    .rename(columns={\"Value\": \"Avg MoM Change %\"})\n",
+    ")\n",
+    "\n",
+    "#2 Step 2: Pivot Other Metrics with Sum Aggregation\n",
+    "base_df = long_df[long_df[\"Metric\"] != \"MoM Change %\"].copy()\n",
+    "\n",
+    "pivot_df = base_df.pivot_table(\n",
+    "    index=[\"BF Level 2\", \"BF Level 3\", \"BF Level 4\", \"GCB\", \"Month\"],\n",
+    "    columns=\"Metric\",\n",
+    "    #3. values=\"Valuet\",\n",
+    "    aggfunc=\"sum\"\n",
+    ").reset_index()\n",
+    "\n",
+    "#3. Step 3: Merge Both into Final Output\n",
+    "final_df = pivot_df.merge(mom_avg, on=[\"BF Level 2\", \"BF Level 3\", \"BF Level 4\", \"GCB\", \"Month\"], how=\"left\")\n",
+    "# Step 3: Merge Both into Final Output\n",
+    "final_df[\"Avg MoM Change %\"] = final_df[\"Avg MoM Change %\"].round(2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "###########\n",
+    "\n",
+    "mom_df = long_df[long_df[\"Metric\"] == \"MoM Change %\"].copy()\n",
+    "mom_df[\"Value\"] = mom_df[\"Value\"].astype(float)\n",
+    "\n",
+    "mom_avg = (\n",
+    "    mom_df.groupby([\"BF Level 2\", \"BF Level 3\", \"BF Level 4\", \"GCB\", \"Month\"])[\"Value\"]\n",
+    "    .mean()\n",
+    "    .reset_index()\n",
+    "    .rename(columns={\"Value\": \"MoM Change %\"})\n",
+    ")\n",
+    "mom_avg[\"Metric\"] = \"MoM Change %\"\n",
+    " Step 2: Replace MoM Change % in long_df\n",
+    "long_df = long_df[long_df[\"Metric\"] != \"MoM Change %\"]\n",
+    "long_df = pd.concat([long_df, mom_avg], ignore_index=True)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17ca351c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "952d8000",
+   "id": "f98ac3ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6834026",
+   "id": "e17a2f90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b40aa50",
+   "id": "7c80d439",
    "metadata": {},
    "outputs": [],
    "source": [
