--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36d2a6f3",
+   "id": "f546f121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,13 +58,28 @@
     "long_df = pd.concat([long_df, mom_avg], ignore_index=True)\n",
     "\n",
     "\n",
-    "\n"
+    "\n",
+    "# Step 1: Pivot all regular metrics\n",
+    "base_df = long_df[long_df[\"Metric\"] != \"MoM Change %\"].copy()\n",
+    "pivot_df = base_df.pivot_table(\n",
+    "    index=[\"BF Level 2\", \"BF Level 3\", \"BF Level 4\", \"GCB\", \"Month\"],\n",
+    "    columns=\"Metric\",\n",
+    "    values=\"Value\",\n",
+    "    aggfunc=\"sum\"\n",
+    ").reset_index()\n",
+    "\n",
+    "# Step 2: Extract MoM Change % separately\n",
+    "mom_df = long_df[long_df[\"Metric\"] == \"MoM Change %\"].copy()\n",
+    "mom_df = mom_df.rename(columns={\"Value\": \"MoM Change %\"}).drop(columns=[\"Metric\"])\n",
+    "\n",
+    "# Step 3: Merge both\n",
+    "final_df = pivot_df.merge(mom_df, on=[\"BF Level 2\", \"BF Level 3\", \"BF Level 4\", \"GCB\", \"Month\"], how=\"left\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17ca351c",
+   "id": "18951148",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f98ac3ee",
+   "id": "9a57b8f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e17a2f90",
+   "id": "4226f921",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c80d439",
+   "id": "9e8c8feb",
    "metadata": {},
    "outputs": [],
    "source": [
