--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f546f121",
+   "id": "106d60d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_long_df_with_mom_column(long_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Takes a long-format DataFrame with 'Metric' and 'Value' columns,\n",
+    "    separates 'MoM Change %' into its own column, and returns a cleaned long_df\n",
+    "    ready for Excel pivoting.\n",
+    "    \"\"\"\n",
+    "    # Step 1: Extract MoM Change % separately\n",
+    "    mom_df = long_df[long_df[\"Metric\"] == \"MoM Change %\"].copy()\n",
+    "    mom_df = mom_df.rename(columns={\"Value\": \"MoM Change %\"}).drop(columns=[\"Metric\"])\n",
+    "\n",
+    "    # Step 2: Remove MoM Change % from stacked metrics\n",
+    "    base_df = long_df[long_df[\"Metric\"] != \"MoM Change %\"].copy()\n",
+    "\n",
+    "    # Step 3: Merge MoM Change % as a separate column\n",
+    "    final_long_df = base_df.merge(\n",
+    "        mom_df,\n",
+    "        on=[\n",
+    "            \"BF Level 1 Name\", \"BF Level 2 Name\", \"BF Level 3 Name\", \"BF Level 4 Name\",\n",
+    "            \"Global Career Band\", \"Month\"\n",
+    "        ],\n",
+    "        how=\"left\"\n",
+    "    )\n",
+    "\n",
+    "    return final_long_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2448ca95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18951148",
+   "id": "6553fdde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a57b8f7",
+   "id": "5edd4dfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4226f921",
+   "id": "5044c287",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e8c8feb",
+   "id": "4bc21a02",
    "metadata": {},
    "outputs": [],
    "source": [
