--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,10 +3,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106d60d2",
+   "id": "6ff0799a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def prepare_pivot_ready_df(long_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Prepares a pivot-ready DataFrame with metrics as columns,\n",
+    "    MoM Change % as a separate column, and BF levels + GCB as filters.\n",
+    "    \"\"\"\n",
+    "    # Step 1: Separate MoM Change %\n",
+    "    mom_df = (\n",
+    "        long_df[long_df[\"Metric\"] == \"MoM Change %\"]\n",
+    "        .drop_duplicates(subset=[\n",
+    "            \"BF Level 1 Name\", \"BF Level 2 Name\", \"BF Level 3 Name\", \"BF Level 4 Name\",\n",
+    "            \"Global Career Band\", \"Month\"\n",
+    "        ])\n",
+    "        .rename(columns={\"Value\": \"MoM Change %\"})\n",
+    "        .drop(columns=[\"Metric\"])\n",
+    "    )\n",
+    "\n",
+    "    # Step 2: Pivot regular metrics\n",
+    "    base_df = long_df[long_df[\"Metric\"] != \"MoM Change %\"].copy()\n",
+    "\n",
+    "    pivot_df = base_df.pivot_table(\n",
+    "        index=[\n",
+    "            \"BF Level 1 Name\", \"BF Level 2 Name\", \"BF Level 3 Name\", \"BF Level 4 Name\",\n",
+    "            \"Global Career Band\", \"Month\"\n",
+    "        ],\n",
+    "        columns=\"Metric\",\n",
+    "        values=\"Value\",\n",
+    "        aggfunc=\"sum\"\n",
+    "    ).reset_index()\n",
+    "\n",
+    "    # Step 3: Merge MoM Change % as separate column\n",
+    "    final_df = pivot_df.merge(mom_df, on=[\n",
+    "        \"BF Level 1 Name\", \"BF Level 2 Name\", \"BF Level 3 Name\", \"BF Level 4 Name\",\n",
+    "        \"Global Career Band\", \"Month\"\n",
+    "    ], how=\"left\")\n",
+    "\n",
+    "    return final_df\n",
+    "\n",
     "def prepare_long_df_with_mom_column(long_df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Takes a long-format DataFrame with 'Metric' and 'Value' columns,\n",
@@ -36,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2448ca95",
+   "id": "a0fe06cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6553fdde",
+   "id": "bd1bfaf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5edd4dfb",
+   "id": "092bdb56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5044c287",
+   "id": "eab9d55e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bc21a02",
+   "id": "41c4b0b0",
    "metadata": {},
    "outputs": [],
    "source": [
