--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ff0799a",
+   "id": "a3eefdbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percent_metrics = [\"% Met\", \"% Not Met\", \"% Exceeding\"]\n",
+    "count_metrics = [\"Total Headcount\", \"Total Records\", \"Total Exceeding\", \"Total Met\"]\n",
+    "\n",
+    "percent_df = long_df[long_df[\"Metric\"].isin(percent_metrics)].copy()\n",
+    "count_df = long_df[long_df[\"Metric\"].isin(count_metrics)].copy()\n",
+    "\n",
+    "Step 3: Export both to Excel\n",
+    "- Sheet 1: percent_df → Pivot with Average aggregation\n",
+    "- Sheet 2: count_df → Pivot with Sum aggregation\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "# Pivot percent metrics with average\n",
+    "percent_pivot = percent_df.pivot_table(\n",
+    "    index=[\n",
+    "        \"BF Level 1 Name\", \"BF Level 2 Name\", \"BF Level 3 Name\", \"BF Level 4 Name\",\n",
+    "        \"Global Career Band\", \"Month\"\n",
+    "    ],\n",
+    "    columns=\"Metric\",\n",
+    "    values=\"Value\",\n",
+    "    aggfunc=\"mean\"\n",
+    ")\n",
+    "\n",
+    "# Pivot count metrics with sum\n",
+    "count_pivot = count_df.pivot_table(\n",
+    "    index=[\n",
+    "        \"BF Level 1 Name\", \"BF Level 2 Name\", \"BF Level 3 Name\", \"BF Level 4 Name\",\n",
+    "        \"Global Career Band\", \"Month\"\n",
+    "    ],\n",
+    "    columns=\"Metric\",\n",
+    "    values=\"Value\",\n",
+    "    aggfunc=\"sum\"\n",
+    ")\n",
+    "\n",
+    "# Merge both\n",
+    "final_pivot = percent_pivot.merge(count_pivot, on=[\n",
+    "    \"BF Level 1 Name\", \"BF Level 2 Name\", \"BF Level 3 Name\", \"BF Level 4 Name\",\n",
+    "    \"Global Career Band\", \"Month\"\n",
+    "])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd7be0c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0fe06cf",
+   "id": "76cef45d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd1bfaf0",
+   "id": "2a6c930d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "092bdb56",
+   "id": "fe7d5aec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eab9d55e",
+   "id": "76976e13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41c4b0b0",
+   "id": "16459185",
    "metadata": {},
    "outputs": [],
    "source": [
