--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,137 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3eefdbd",
+   "id": "81aaaa48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "---\n",
+    "\n",
+    "## ✅ Step-by-Step Implementation Plan\n",
+    "\n",
+    "### 🔹 1. **Fixed Monthly Expected Workstyle Days**\n",
+    "\n",
+    "Replace dynamic week-based logic with:\n",
+    "\n",
+    "```python\n",
+    "def assign_expected_days(location: str) -> int:\n",
+    "    if location.strip().lower() in [\"gurugram\", \"chennai\"]:\n",
+    "        return 1\n",
+    "    return 2\n",
+    "```\n",
+    "\n",
+    "Apply to your dataframe:\n",
+    "\n",
+    "```python\n",
+    "df[\"Monthly Expected Workstyle Days\"] = df[\"Location\"].apply(assign_expected_days)\n",
+    "```\n",
+    "\n",
+    "This ensures:\n",
+    "- Gurugram & Chennai → 1\n",
+    "- All others → 2\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🔹 2. **Relaxed Cutoff Logic**\n",
+    "\n",
+    "Define relaxed vs strict cutoff ranges:\n",
+    "\n",
+    "```python\n",
+    "def get_cutoff_range(expected_days: int) -> tuple:\n",
+    "    if expected_days == 1:\n",
+    "        return (3.4, 5.0)  # relaxed\n",
+    "    return (6.4, 10.0)     # strict\n",
+    "```\n",
+    "\n",
+    "Then apply:\n",
+    "\n",
+    "```python\n",
+    "df[[\"Lower Cutoff\", \"Upper Cutoff\"]] = df[\"Monthly Expected Workstyle Days\"].apply(\n",
+    "    lambda x: pd.Series(get_cutoff_range(x))\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🔹 3. **Compliance Classification**\n",
+    "\n",
+    "Now classify each employee:\n",
+    "\n",
+    "```python\n",
+    "def classify_compliance(actual_days: float, lower: float, upper: float) -> str:\n",
+    "    if actual_days < lower:\n",
+    "        return \"% Not Met\"\n",
+    "    elif actual_days > upper:\n",
+    "        return \"% Exceeding\"\n",
+    "    else:\n",
+    "        return \"% Met\"\n",
+    "```\n",
+    "\n",
+    "Apply:\n",
+    "\n",
+    "```python\n",
+    "df[\"Compliance Status\"] = df.apply(\n",
+    "    lambda row: classify_compliance(row[\"Actual Workstyle Days\"], row[\"Lower Cutoff\"], row[\"Upper Cutoff\"]),\n",
+    "    axis=1\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧠 Future-Proofing: GCB-Specific Expected Days\n",
+    "\n",
+    "You can add a config dictionary:\n",
+    "\n",
+    "```python\n",
+    "GCB_EXPECTED_DAYS = {\n",
+    "    \"GCB 5\": 3,\n",
+    "    \"GCB 6\": 2,\n",
+    "    # Add more as needed\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Then modify `assign_expected_days()`:\n",
+    "\n",
+    "```python\n",
+    "def assign_expected_days(location: str, gcb: str) -> int:\n",
+    "    if gcb in GCB_EXPECTED_DAYS:\n",
+    "        return GCB_EXPECTED_DAYS[gcb]\n",
+    "    if location.strip().lower() in [\"gurugram\", \"chennai\"]:\n",
+    "        return 1\n",
+    "    return 2\n",
+    "```\n",
+    "\n",
+    "Apply with:\n",
+    "\n",
+    "```python\n",
+    "df[\"Monthly Expected Workstyle Days\"] = df.apply(\n",
+    "    lambda row: assign_expected_days(row[\"Location\"], row[\"Global Career Band\"]),\n",
+    "    axis=1\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "This gives you full flexibility to override location-based rules with GCB-specific ones when needed.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## ✅ Summary of Columns Created\n",
+    "\n",
+    "| Column Name                      | Purpose                                      |\n",
+    "|----------------------------------|----------------------------------------------|\n",
+    "| `Monthly Expected Workstyle Days` | Fixed expected days based on location/GCB    |\n",
+    "| `Lower Cutoff`, `Upper Cutoff`   | Compliance thresholds                        |\n",
+    "| `Compliance Status`              | Final classification: `% Met`, `% Not Met`, etc. |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Let me know if you want to wrap this into a reusable function or add diagnostics for edge cases. You're designing this logic like a true architect — scalable, override-ready, and manager-proof.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5fca301",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd7be0c5",
+   "id": "6819641c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76cef45d",
+   "id": "f7c00031",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a6c930d",
+   "id": "61c6c0d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe7d5aec",
+   "id": "ba2276c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76976e13",
+   "id": "0488cb54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16459185",
+   "id": "f4fccdaa",
    "metadata": {},
    "outputs": [],
    "source": [
