--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81aaaa48",
+   "id": "3b50d627",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,21 @@
     "Replace dynamic week-based logic with:\n",
     "\n",
     "```python\n",
-    "def assign_expected_days(location: str) -> int:\n",
-    "    if location.strip().lower() in [\"gurugram\", \"chennai\"]:\n",
+    "def compute_expected_days(row):\n",
+    "    location = str(row[\"Location\"]).strip().lower()\n",
+    "    \n",
+    "    # Optional future override by GCB\n",
+    "    gcb = str(row.get(\"Global Career Band\", \"\")).strip()\n",
+    "    gcb_override = {\n",
+    "        # \"GCB 5\": 3,  # Example: uncomment when needed\n",
+    "    }\n",
+    "\n",
+    "    if gcb in gcb_override:\n",
+    "        return gcb_override[gcb]\n",
+    "    \n",
+    "    if location in [\"chennai\", \"gurugram\"]:\n",
     "        return 1\n",
     "    return 2\n",
-    "```\n",
-    "\n",
     "Apply to your dataframe:\n",
     "\n",
     "```python\n",
@@ -133,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5fca301",
+   "id": "a8e9bdf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6819641c",
+   "id": "10bfbe31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7c00031",
+   "id": "2b063184",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61c6c0d1",
+   "id": "8404028e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba2276c2",
+   "id": "017977e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0488cb54",
+   "id": "0c3e32c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4fccdaa",
+   "id": "301cd3a8",
    "metadata": {},
    "outputs": [],
    "source": [
